# tabscript

./: .cursorignore  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  render.txt  setup.cfg  setup.py  tests.md
.cursor/rules/: general.mdc  tabscript.mdc
.github/workflows/: tests.yml
docs/: development.md  format.md  implementation.md  layout.md  layout_bar_detail.txt  layout_overview.txt  refactor.md  tests.md
samples/: repeat_sample.tab  samples.tab
src/tabscript/: __init__.py  cli.py  cli_html.py  exceptions.py  models.py  parser.py  renderer.py  style.py
src/tabscript/models/: note.py
src/tabscript/parser/: __init__.py  analyzer.py  note_builder.py  parser.py  preprocessor.py  validator.py
src/tabscript/parser/analyzer/: note.py
src/tabscript/parser/builder/: __init__.py  bar.py  note.py  score.py
styles/: default.yaml
tabs/: chord_test.tab  height.tab  hello_world.tab  newpage.tab  repeat_bar_test.tab  repeat_sample.tab  samples.tab  triplet.tab
tests/: conftest.py  test_comments.py  test_edge_cases.py  test_integration.py  test_musical_validity.py  test_parser.py  test_renderer.py
tests/data/: invalid_metadata.tab  missing_section.tab  repeat_test.tab  sample.tab
tests/parser/: test_00_preprocessor.py  test_01_preprocess.py  test_01_preprocessor.py  test_02_analyzer.py  test_02_structure.py  test_03_bar_content.py  test_04_note_builder.py  test_04_section_analyzer.py  test_04_validation.py  test_05_bar_builder.py  test_05_integration.py  test_05_repeat.py  test_05_validator.py  test_06_integration.py  test_06_note_builder.py  test_06_score_builder.py  test_07_analyzer.py  test_07_bar_builder.py  test_08_score_builder.py  test_10_parser_repeat.py  test_10_parser_section.py  test_11_parser_bar.py  test_11_parser_section.py  test_13_parser_note.py  test_20_validator.py  test_30_builder_score.py  test_31_builder_bar.py  test_32_builder_note.py  test_99_integration.py  test_99_parser.py
tests/renderer/: test_00_style_manager.py  test_01_layout.py  test_01_layout_calculator.py  test_02_note_renderer.py  test_02_output.py  test_03_triplet_renderer.py  test_04_volta_renderer.py  test_05_repeat_renderer.py  test_06_dummy_bar_renderer.py  test_07_bar_renderer.py  test_08_renderer.py
vscode-extension/: .gitignore  package.json
vscode-extension/src/: extension.ts
vscode-extensions/tabscript-preview/: README.md  package-lock.json  package.json
vscode-extensions/tabscript-preview/src/: extension.ts
vscode-extensions/tabscript-syntax/: LICENSE  README.md  language-configuration.json  package-lock.json  package.json
vscode-extensions/tabscript-syntax/src/: extension.ts
vscode-extensions/tabscript-syntax/syntaxes/: tabscript.tmLanguage.json
vscode-extensions/tabscript-syntax/themes/: tabscript-color-theme.json  tabscript-dark-color-theme.json  tabscript-dark-theme.json  tabscript-light-color-theme.json  tabscript-light-theme.json
