[metadata]
name = tabscript
version = 0.1.0
description = A simple text-based guitar tablature format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/tabscript
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src 